syntax = "proto3";

package login;

option go_package = "/protos;protos";

message User {
  string firstname = 1;
  string lastname = 2;
  string email = 3;
  string username = 4;
  string password = 5;
  string token = 6;
}

message LoginRequest {
  User user = 1;
}

message LoginResponse {
  User user = 1;
}

service LoginService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Signup(LoginRequest) returns (LoginResponse);
}
